{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 204,
  "lineage": "70c0aa19-5392-eddf-adc3-8a8429c4ce06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:security-group/sg-0a6523fd37c863820",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6523fd37c863820",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.1.154.160/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "default",
            "owner_id": "438513923646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Email": "backup@iot4.net",
              "Owner": "Vihar Chokshi",
              "Use_Elastio": "True"
            },
            "tags_all": {
              "Email": "backup@iot4.net",
              "Owner": "Vihar Chokshi",
              "Use_Elastio": "True"
            },
            "vpc_id": "vpc-0f05abf617666f2e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:438513923646:loadbalancer/east-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "east-elb-1264499546.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "east-elb",
            "idle_timeout": 400,
            "instances": [
              "i-05001420f1167421e",
              "i-081ce6869d2e589ea"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:438513923646:certificate/88532207-86d3-4a70-9693-fe7d319360b5"
              }
            ],
            "name": "east-elb",
            "security_groups": [
              "sg-0a6523fd37c863820"
            ],
            "source_security_group": "438513923646/default",
            "source_security_group_id": "sg-0a6523fd37c863820",
            "subnets": [
              "subnet-02a5601e7208b71a6",
              "subnet-0701397a1e9d7c5d2",
              "subnet-0a0e2bfc0b0912161"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_acm_certificate.a",
            "aws_instance.east",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0688c80738bed2ab1",
            "arn": "arn:aws:ec2:us-east-1:438513923646:instance/i-05001420f1167421e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0cf4448324a9c8474",
                "throughput": 0,
                "volume_id": "vol-06e48ccfdaea54a67",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "backup-admin",
            "id": "i-05001420f1167421e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "backup@iot4.net",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04dbcfd1d0d164bf7",
            "private_dns": "ip-10-77-4-149.ec2.internal",
            "private_ip": "10.77.4.149",
            "public_dns": "ec2-100-24-106-174.compute-1.amazonaws.com",
            "public_ip": "100.24.106.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c54d2835acafffbd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0e2bfc0b0912161",
            "tags": {
              "Email": "backup@iot4.net",
              "Name": "east-0.backup.iot4.net",
              "Owner": "Vihar Chokshi",
              "Use_Elastio": "True"
            },
            "tags_all": {
              "Email": "backup@iot4.net",
              "Name": "east-0.backup.iot4.net",
              "Owner": "Vihar Chokshi",
              "Use_Elastio": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6523fd37c863820"
            ]
          },
          "dependencies": [
            "aws_key_pair.v",
            "data.aws_ami.amazon-linux-2",
            "data.aws_availability_zones.available",
            "data.aws_iam_instance_profile.instance_profile",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0688c80738bed2ab1",
            "arn": "arn:aws:ec2:us-east-1:438513923646:instance/i-081ce6869d2e589ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0cf4448324a9c8474",
                "throughput": 0,
                "volume_id": "vol-0b4de15a41a60b26f",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "backup-admin",
            "id": "i-081ce6869d2e589ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "backup@iot4.net",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ac9e692b780b8e6",
            "private_dns": "ip-10-77-5-176.ec2.internal",
            "private_ip": "10.77.5.176",
            "public_dns": "ec2-3-89-217-5.compute-1.amazonaws.com",
            "public_ip": "3.89.217.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2abfdeaf67b1da9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a5601e7208b71a6",
            "tags": {
              "Email": "backup@iot4.net",
              "Name": "east-1.backup.iot4.net",
              "Owner": "Vihar Chokshi",
              "Use_Elastio": "True"
            },
            "tags_all": {
              "Email": "backup@iot4.net",
              "Name": "east-1.backup.iot4.net",
              "Owner": "Vihar Chokshi",
              "Use_Elastio": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6523fd37c863820"
            ]
          },
          "dependencies": [
            "aws_key_pair.v",
            "data.aws_ami.amazon-linux-2",
            "data.aws_availability_zones.available",
            "data.aws_iam_instance_profile.instance_profile",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:internet-gateway/igw-0aa27ac36e66b00c3",
            "id": "igw-0aa27ac36e66b00c3",
            "owner_id": "438513923646",
            "tags": {
              "Name": "iot-elastio"
            },
            "tags_all": {
              "Name": "iot-elastio"
            },
            "vpc_id": "vpc-0f05abf617666f2e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa27ac36e66b00c3",
            "id": "r-rtb-009f42a3d0b6fe2b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009f42a3d0b6fe2b6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:route-table/rtb-009f42a3d0b6fe2b6",
            "id": "rtb-009f42a3d0b6fe2b6",
            "owner_id": "438513923646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa27ac36e66b00c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iot-elastio-public"
            },
            "tags_all": {
              "Name": "iot-elastio-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f05abf617666f2e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb3b5eac7c9d996a",
            "route_table_id": "rtb-009f42a3d0b6fe2b6",
            "subnet_id": "subnet-0a0e2bfc0b0912161"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067822afcbbfc58f5",
            "route_table_id": "rtb-009f42a3d0b6fe2b6",
            "subnet_id": "subnet-02a5601e7208b71a6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e347e53a97aea382",
            "route_table_id": "rtb-009f42a3d0b6fe2b6",
            "subnet_id": "subnet-0701397a1e9d7c5d2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:subnet/subnet-0a0e2bfc0b0912161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.77.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e2bfc0b0912161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438513923646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iot-elastio-public-us-east-1a"
            },
            "tags_all": {
              "Name": "iot-elastio-public-us-east-1a"
            },
            "vpc_id": "vpc-0f05abf617666f2e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:subnet/subnet-02a5601e7208b71a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.77.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a5601e7208b71a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438513923646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iot-elastio-public-us-east-1b"
            },
            "tags_all": {
              "Name": "iot-elastio-public-us-east-1b"
            },
            "vpc_id": "vpc-0f05abf617666f2e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:subnet/subnet-0701397a1e9d7c5d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.77.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0701397a1e9d7c5d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438513923646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iot-elastio-public-us-east-1c"
            },
            "tags_all": {
              "Name": "iot-elastio-public-us-east-1c"
            },
            "vpc_id": "vpc-0f05abf617666f2e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438513923646:vpc/vpc-0f05abf617666f2e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.77.0.0/16",
            "default_network_acl_id": "acl-0be1035a1fd36ab7d",
            "default_route_table_id": "rtb-0d4af2fbb305f8f33",
            "default_security_group_id": "sg-0a6523fd37c863820",
            "dhcp_options_id": "dopt-06bbe34c97bd1bd8a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f05abf617666f2e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4af2fbb305f8f33",
            "owner_id": "438513923646",
            "tags": {
              "Name": "iot-elastio"
            },
            "tags_all": {
              "Name": "iot-elastio"
            }
          }
        }
      ]
    }
  ]
}